--- a/src/app/contador/contador.component.html
+++ b/src/app/contador/contador.component.html
@@ -1,3 +1,5 @@
+<h1>Contador:</h1>
+
 <div class="text-center">
     <button class="btn btn-primary mr-2" (click)="aumentar()">Aumentar</button>
     <button class="btn btn-danger" (click)="diminuir()">Diminuir</button>
