--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,22 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div class="py-1 h1Gustavo">
   <h1>
     {{ title }}
   </h1>
 </div>
 
-<app-contador></app-contador>
+<div class="container">
+  <ul class="nav font-weight-bold">
+    <li class="nav-item">
+        <a class="nav-link" routerLink="/">Home</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" routerLink="/counter">Counter</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" routerLink="/languages">Languages</a>
+    </li>
+  </ul>
 
+  <router-outlet></router-outlet>
+</div>
