--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,9 @@
     <li class="nav-item">
         <a class="nav-link" routerLink="/languages">Languages</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" routerLink="/adicionar-linguagens">Add Languages</a>
+    </li>
   </ul>
 
   <router-outlet></router-outlet>
