--- a/src/app/lista-linguagens/lista-linguagens.component.html
+++ b/src/app/lista-linguagens/lista-linguagens.component.html
@@ -3,9 +3,9 @@
 <div class="row">
     <div *ngFor="let linguagem of linguagens" class="card col-sm-4" style="width: 18rem;">
         <div class="card-body">
-            <h5 class="card-title">{{ linguagem.name }}</h5>
+            <h5 class="card-title">{{ linguagem.id }} - {{ linguagem.name }}</h5>
             <h6 class="card-subtitle mb-2 text-muted">{{ linguagem.creator }}</h6>
-            <p class="card-text">{{ linguagem.year }}</p>
+            <p class="card-text">{{ linguagem.year | ano }}</p>
         </div>
     </div>
 </div>
